Chat messages overflow fix

--- a/resources/sass/message.scss
+++ b/resources/sass/message.scss
@@ -38,6 +38,9 @@
           float: right;
         }
       }
+      .msg_text {
+          overflow-wrap: break-word;
+      }
     }
   }
 
